--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "sass": "^1.59.3",
+    "scroll-snap": "^4.0.3",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
