--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.59.3",
     "scroll-snap": "^4.0.3",
     "typescript": "^4.9.5",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^7.0.0",
+    "@types/react-transition-group": "^4.4.5",
     "@types/uuid": "^9.0.1"
   }
 }
