--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,10 +1,12 @@
 [
   {
     "id": 0,
-    "name": "Sorting Algorithm Visualizer"
+    "name": "Sorting Algorithm Visualizer",
+    "url": "https://sortingvisualizer.com"
   },
   {
     "id": 1,
-    "name": "Movie Database Viewer"
+    "name": "Movie Database Viewer",
+    "url": "https://mdbv.net"
   }
 ]
