--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,13 +4,15 @@
     "name": "Sorting Algorithm Visualizer",
     "imagePath": "sav-project-image.png",
     "imageAltText": "Sorting Algorithm Visualizer: An educational tool for visualizing common sorting algorithms. This app includes descriptions of each algorithm's advantages and disadvantages, complexity tables, and code implementations.",
-    "url": "https://sortingvisualizer.com"
+    "projectUrl": "https://sortingvisualizer.com",
+    "githubUrl": "https://github.com/atorcode/sorting-algorithm-visualizer"
   },
   {
     "id": 1,
     "name": "Movie Database Viewer",
     "imagePath": "mdbv-project-image.png",
     "imageAltText": "Movie Database Viewer: An app for browsing movies and movie details. See what's trending, find a trailer, curate a favorites list, and more!",
-    "url": "https://mdbv.net"
+    "projectUrl": "https://mdbv.net",
+    "githubUrl": "https://github.com/atorcode/movie-database-viewer"
   }
 ]
