Create Explore My Work button and make Button check if link is internal or external

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,7 @@
     "name": "Portfolio",
     "imagePath": "coming-soon.jpg",
     "imageAltText": "Alberto Torrigiotti's Front-end Web Developer Portfolio",
-    "projectUrl": "#",
+    "projectUrl": "#introduction",
     "githubUrl": "https://github.com/atorcode/portfolio"
   },
   {
